name:           flolac18
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/flolac18#readme>
homepage:       https://github.com/jaiyalas/flolac18#readme
author:         jaiyalas@iis.sinica.edu.tw
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type: git
  location: https://github.com/jaiyalas/flolac18

executable flolac18
  main-is: Main.hs
  hs-source-dirs:
    src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
        base,
        containers >= 0.5,
        hakyll >= 4.6.9.0,
        pandoc >= 1.13.2.1,
        time >= 1.5
  default-language: Haskell2010
